# contraparty

./: .gitignore  README.md
contracts/: .env.example  .gitignore  README.md
contracts/deployments/: megaeth.example.toml  megaeth_canonic_migration.toml  megaeth_canonic_redeploy.toml  megaeth_contraparty_redeploy.toml
contracts/docs/: README.md  prop-amm-aerodrome.md  prop-amm-canonic-maob.md  prop-amm-uniswap-v2.md  prop-amm-uniswap-v3.md  swap-execution-flow.md
contracts/foundry/: .env.example  .gitignore  README.md  foundry.toml  pyproject.toml
contracts/foundry/deployments/: base.example.toml  deployments.example.toml  megaeth.example.toml  megaeth_quoters.example.toml
contracts/foundry/lib/view-quoter-v3/contracts/: Quoter.sol
contracts/foundry/script/: DeployBaseContrapartyQuoteOnly.s.sol  DeployBaseVyperStack.s.sol  DeployMegaethQuoters.s.sol  DeployMegaethV3Stack.s.sol  SwapBaseWethUsdc.s.sol
contracts/foundry/src/: AerodromePropAMM.vy  UniswapV2PropAMM.vy  UniswapV3PropAMM.vy  contrapartyV2.vy
contracts/foundry/test/: ContrapartyMegaethFork.t.sol  ContrapartyV2.t.sol  ContrapartyVyperEndToEndFork.t.sol  ContrapartyVyperFuzz.t.sol  MegaethForkSmoke.t.sol  MegaethQuoterFork.t.sol  PropAMMVyperFork.t.sol  SelfCallExample.t.sol
contracts/foundry/test/mocks/: MockERC20.sol
contracts/script/: DeployBaseContrapartyQuoteOnly.s.sol  DeployBaseVyperStack.s.sol  DeployMegaethV3Stack.s.sol  MigrateMegaethCanonicToSingle.s.sol  (+3 more)
frontend/: .env.example  DEPLOY_ETH_LIMO.md  README.md  app.js  defaults.js  index.html  styles.css  wallet.js
(+20 files in other folders)
