[project]
name = "contraparty-foundry"
version = "0.1.0"
description = "Poetry env for Vyper tooling in foundry project"
authors = [
    {name = "kosunghun",email = "kosunghun317@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "vyper (>=0.4.3,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
